# Massai-Revision-Evaluations

1_Python_Implementation/: q1_product_inventory.py  q2_prime_generator.py  q5_sum_squres.py  q6_slaes_json.py  q7_mini_bank_simulation.py  q9_students_dataset.py  report.txt
3_FastAPI_Movie_Booking_System/: README.md  config.py  database.py  main.py  problem_statement.txt  pyproject.toml  requirements.txt
3_FastAPI_Movie_Booking_System/models/: booking.py  movie.py  theatre.py  user.py
3_FastAPI_Movie_Booking_System/routers/: admin.py  auth.py  user.py
3_FastAPI_Movie_Booking_System/utils/: auth.py  email.py
Research_RAG_System/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Research_RAG_System/src/api/: dependencies.py  routes.py
Research_RAG_System/src/config/: settings.py
Research_RAG_System/src/crawler/: beautifulsoup_crawler.py  metadata_extractor.py
Research_RAG_System/src/generation/: rag_chain.py
Research_RAG_System/src/models/: schemas.py
Research_RAG_System/src/processing/: chunker.py  text_cleaner.py
Research_RAG_System/src/retrieval/: hybrid_retriever.py  query_processor.py
Research_RAG_System/src/vectorstore/: chroma_store.py
agentic-system-design/: README.md
